# catalyst-firmware

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/: common.cmake  project.cmake
cubemx/catalyst-f401ce-B/: Makefile  Measurements.md  catalyst-f401ce-B.ioc  catalyst.jdebug  pinout.csv
linker/: STM32F401CEUx_FLASH.ld  STM32F401CEUx_FLASH_BOOTLOADER.ld
scripts/: f401.jflash  stm32f4picoprobe.cfg
src/: app.hh  bank.hh  blind.hh  catalyst.hh  channel.hh  channelmode.hh  channelvalue.hh  clock.hh  clockdivider.hh  controls.hh  debug.hh  fixed_list.hh  fixedvector.hh  flags.hh  flash.hh  flash_block.hh  intclock.hh  legacy_shared_data.hh  macro.hh  macro_mode.hh  macro_seq.hh  macro_value.hh  main.cc  muxed_button.hh  outputs.hh  page_sequencer.hh  params.hh  pathway.hh  quantizer.hh  queue.hh  random.hh  random_shuffle.hh  randompool.hh  range.hh  recorder.hh  scales.hh  scene.hh  sequence_phaser.hh  sequencer.hh  sequencer_player.hh  (+15 more)
src/bootloader/: animation.hh  bootloader-controls.hh  bootloader.hh  main.cc
src/conf/: board_conf.hh  build_options.hh  model.hh  palette.hh  quantizer_scales.hh  version.hh
src/f401-drivers/: CMakeLists.txt  controls.hh  flash.cc  flash.hh  outputs.hh  saved_settings.hh  stm32f4xx_hal_conf.h  system_target.hh
src/hardware_tests/: adc.hh  buttons.hh  dac.hh  encoders.hh  hardware_tests.cc  jacks.hh  (+3 more)
tests/: Makefile  banks_tests.cc  calibration_test.cc  clock_test.cc  fixedlist_test.cc  outputs.hh  palette_tests.cc  quantizer_test.cc  seq_test.cc  settings.hh  sim_test.cc  ui.hh
(+72 files in other folders)
